--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-linear-gradient": "^8.0.0",
+    "expo-permissions": "~8.0.0",
+    "form-data": "^3.0.0",
     "galio-framework": "^0.6.3",
     "ionicons": "^4.6.3",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-moment": "^0.9.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-pure-jwt": "^2.1.1",
